设置设置页颜色

--- a/163评论/setting.plist
+++ b/163评论/setting.plist
@@ -23,7 +23,7 @@
 			<key>title</key>
 			<string>清理缓存</string>
 			<key>content</key>
-			<string>5MB</string>
+			<string></string>
 		</dict>
 	</array>
 	<array>
