--- a/163评论Tests/163评论Tests-Info.plist
+++ b/163评论Tests/163评论Tests-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.ccm.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.shanqb.163</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
