--- a/163评论/163评论-Info.plist
+++ b/163评论/163评论-Info.plist
@@ -5,7 +5,7 @@
 	<key></key>
 	<string></string>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<string>zh_CN</string>
 	<key>CFBundleDisplayName</key>
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
